@@ -10,3 +10,4 @@ _None_
 
 [B]Channel related[/B]
 * Fixed: Issue with empty folders in main TV4 listings.
+* Fixed: Omroep Brabant broke due to back end changes.
